[#451] server/core module is switched to JakartaEE 9 - all tests pass